--- a/source/unix/mapeditor/Makefile.in
+++ b/source/unix/mapeditor/Makefile.in
@@ -131,7 +131,8 @@ terraintype.cpp objecttype.cpp textfiletags.cpp itemrepository.cpp \
 stringtokenizer.cpp music.cpp messages.cpp paradialog.cpp \
 textfile_evaluation.cpp containerbasetype.cpp soundList.cpp simplestream.cpp \
 mappolygons.cpp prehistoricevents.cpp gameevents.cpp gameeventsystem.cpp \
-gameevent_dialogs.cpp clipboard.cpp resourceplacement.cpp resourceplacementdialog.cpp
+gameevent_dialogs.cpp clipboard.cpp resourceplacement.cpp resourceplacementdialog.cpp \
+geometry.cpp weatherarea.cpp guidimension.cpp weatherdialog.cpp 
 
 
 asc_mapedit_LDADD = $(top_builddir)/source/sdl/libsdl.la \
@@ -171,7 +172,9 @@ am_asc_mapedit_OBJECTS = edevents.$(OBJEXT) edgen.$(OBJEXT) \
 	mappolygons.$(OBJEXT) prehistoricevents.$(OBJEXT) \
 	gameevents.$(OBJEXT) gameeventsystem.$(OBJEXT) \
 	gameevent_dialogs.$(OBJEXT) clipboard.$(OBJEXT) \
-	resourceplacement.$(OBJEXT) resourceplacementdialog.$(OBJEXT)
+	resourceplacement.$(OBJEXT) resourceplacementdialog.$(OBJEXT) \
+	geometry.$(OBJEXT) weatherarea.$(OBJEXT) guidimension.$(OBJEXT) \
+	weatherdialog.$(OBJEXT)
 asc_mapedit_OBJECTS = $(am_asc_mapedit_OBJECTS)
 asc_mapedit_DEPENDENCIES = $(top_builddir)/source/sdl/libsdl.la \
 	$(top_builddir)/source/libs/triangul/libtriangul.la \
@@ -204,7 +207,8 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/gameevents.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/gameeventsystem.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/gamemap.Po ./$(DEPDIR)/gameoptions.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/graphicset.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/geometry.Po ./$(DEPDIR)/graphicset.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/guidimension.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/itemrepository.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/loadbi3.Po ./$(DEPDIR)/loaders.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/loadpcxc.Po \
@@ -228,7 +232,9 @@ am__depfiles_maybe = depfiles
 @AMDEP_TRUE@	./$(DEPDIR)/textfileparser.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/textfiletags.Po ./$(DEPDIR)/typen.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/vehicle.Po ./$(DEPDIR)/vehicletype.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/viewcalculation.Po
+@AMDEP_TRUE@	./$(DEPDIR)/viewcalculation.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/weatherarea.Po \
+@AMDEP_TRUE@	./$(DEPDIR)/weatherdialog.Po
 CXXCOMPILE = $(CXX) $(DEFS) $(DEFAULT_INCLUDES) $(INCLUDES) \
 	$(AM_CPPFLAGS) $(CPPFLAGS) $(AM_CXXFLAGS) $(CXXFLAGS)
 LTCXXCOMPILE = $(LIBTOOL) --mode=compile $(CXX) $(DEFS) \
@@ -316,7 +322,9 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameeventsystem.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gamemap.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/gameoptions.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/geometry.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/graphicset.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/guidimension.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/itemrepository.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/loadbi3.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/loaders.Po@am__quote@
@@ -355,6 +363,8 @@ distclean-compile:
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicle.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/vehicletype.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/viewcalculation.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/weatherarea.Po@am__quote@
+@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/weatherdialog.Po@am__quote@
 
 distclean-depend:
 	-rm -rf ./$(DEPDIR)
