--- a/source/unix/asc/Makefile.in
+++ b/source/unix/asc/Makefile.in
@@ -119,8 +119,8 @@ asc_SOURCES = unitctrl.cpp soundList.cpp typen.cpp \
 strtmesg.cpp stack.cpp spfst.cpp sgstream.cpp sg.cpp pd.cpp palette.cpp \
 newfont.cpp network.cpp misc.cpp loadpcxc.cpp loaders.cpp \
 loadbi3.cpp gui.cpp gamedlg.cpp dlg_box.cpp dialog.cpp controls.cpp \
-building.cpp basestrm.cpp basegfx.cpp attack.cpp CLoadable.cpp Property.cpp \
-PropertyGroup.cpp gameoptions.cpp Named.cpp astar2.cpp vehicletype.cpp \
+building.cpp basestrm.cpp basegfx.cpp attack.cpp \
+gameoptions.cpp astar2.cpp vehicletype.cpp \
 buildingtype.cpp containerbase.cpp mapalgorithms.cpp viewcalculation.cpp \
 gamemap.cpp password.cpp password_dialog.cpp replay.cpp research.cpp \
 mapdisplay.cpp resourcenet.cpp dashboard.cpp ascstring.cpp graphicset.cpp \
@@ -153,27 +153,26 @@ am_asc_OBJECTS = unitctrl.$(OBJEXT) soundList.$(OBJEXT) typen.$(OBJEXT) \
 	gui.$(OBJEXT) gamedlg.$(OBJEXT) dlg_box.$(OBJEXT) \
 	dialog.$(OBJEXT) controls.$(OBJEXT) building.$(OBJEXT) \
 	basestrm.$(OBJEXT) basegfx.$(OBJEXT) attack.$(OBJEXT) \
-	CLoadable.$(OBJEXT) Property.$(OBJEXT) PropertyGroup.$(OBJEXT) \
-	gameoptions.$(OBJEXT) Named.$(OBJEXT) astar2.$(OBJEXT) \
-	vehicletype.$(OBJEXT) buildingtype.$(OBJEXT) \
-	containerbase.$(OBJEXT) mapalgorithms.$(OBJEXT) \
-	viewcalculation.$(OBJEXT) gamemap.$(OBJEXT) password.$(OBJEXT) \
-	password_dialog.$(OBJEXT) replay.$(OBJEXT) research.$(OBJEXT) \
-	mapdisplay.$(OBJEXT) resourcenet.$(OBJEXT) dashboard.$(OBJEXT) \
-	ascstring.$(OBJEXT) graphicset.$(OBJEXT) vehicle.$(OBJEXT) \
-	buildings.$(OBJEXT) networkdata.$(OBJEXT) \
-	textfileparser.$(OBJEXT) terraintype.$(OBJEXT) \
-	objecttype.$(OBJEXT) textfiletags.$(OBJEXT) \
-	itemrepository.$(OBJEXT) stringtokenizer.$(OBJEXT) \
-	music.$(OBJEXT) messages.$(OBJEXT) paradialog.$(OBJEXT) \
-	textfile_evaluation.$(OBJEXT) containerbasetype.$(OBJEXT) \
-	messagedlg.$(OBJEXT) simplestream.$(OBJEXT) \
-	mappolygons.$(OBJEXT) prehistoricevents.$(OBJEXT) \
-	gameevents.$(OBJEXT) gameeventsystem.$(OBJEXT) \
-	gameevent_dialogs.$(OBJEXT) statisticdialog.$(OBJEXT) \
-	clipboard.$(OBJEXT) geometry.$(OBJEXT) weatherarea.$(OBJEXT) \
-	guidimension.$(OBJEXT) guiiconhandler.$(OBJEXT) \
-	guifunctions.$(OBJEXT) iconrepository.$(OBJEXT)
+	gameoptions.$(OBJEXT) astar2.$(OBJEXT) vehicletype.$(OBJEXT) \
+	buildingtype.$(OBJEXT) containerbase.$(OBJEXT) \
+	mapalgorithms.$(OBJEXT) viewcalculation.$(OBJEXT) \
+	gamemap.$(OBJEXT) password.$(OBJEXT) password_dialog.$(OBJEXT) \
+	replay.$(OBJEXT) research.$(OBJEXT) mapdisplay.$(OBJEXT) \
+	resourcenet.$(OBJEXT) dashboard.$(OBJEXT) ascstring.$(OBJEXT) \
+	graphicset.$(OBJEXT) vehicle.$(OBJEXT) buildings.$(OBJEXT) \
+	networkdata.$(OBJEXT) textfileparser.$(OBJEXT) \
+	terraintype.$(OBJEXT) objecttype.$(OBJEXT) \
+	textfiletags.$(OBJEXT) itemrepository.$(OBJEXT) \
+	stringtokenizer.$(OBJEXT) music.$(OBJEXT) messages.$(OBJEXT) \
+	paradialog.$(OBJEXT) textfile_evaluation.$(OBJEXT) \
+	containerbasetype.$(OBJEXT) messagedlg.$(OBJEXT) \
+	simplestream.$(OBJEXT) mappolygons.$(OBJEXT) \
+	prehistoricevents.$(OBJEXT) gameevents.$(OBJEXT) \
+	gameeventsystem.$(OBJEXT) gameevent_dialogs.$(OBJEXT) \
+	statisticdialog.$(OBJEXT) clipboard.$(OBJEXT) \
+	geometry.$(OBJEXT) weatherarea.$(OBJEXT) guidimension.$(OBJEXT) \
+	guiiconhandler.$(OBJEXT) guifunctions.$(OBJEXT) \
+	iconrepository.$(OBJEXT)
 asc_OBJECTS = $(am_asc_OBJECTS)
 asc_DEPENDENCIES = $(top_builddir)/source/libs/triangul/libtriangul.la \
 	$(top_builddir)/source/ai/libai.la \
@@ -190,10 +189,7 @@ LDFLAGS = @LDFLAGS@
 LIBS = @LIBS@
 depcomp = $(SHELL) $(top_srcdir)/depcomp
 am__depfiles_maybe = depfiles
-@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/CLoadable.Po ./$(DEPDIR)/Named.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/Property.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/PropertyGroup.Po \
-@AMDEP_TRUE@	./$(DEPDIR)/ascstring.Po ./$(DEPDIR)/astar2.Po \
+@AMDEP_TRUE@DEP_FILES = ./$(DEPDIR)/ascstring.Po ./$(DEPDIR)/astar2.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/attack.Po ./$(DEPDIR)/basegfx.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/basestrm.Po ./$(DEPDIR)/building.Po \
 @AMDEP_TRUE@	./$(DEPDIR)/buildings.Po \
@@ -302,10 +298,6 @@ mostlyclean-compile:
 distclean-compile:
 	-rm -f *.tab.c
 
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/CLoadable.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Named.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/Property.Po@am__quote@
-@AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/PropertyGroup.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/ascstring.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/astar2.Po@am__quote@
 @AMDEP_TRUE@@am__include@ @am__quote@./$(DEPDIR)/attack.Po@am__quote@
