Fixed compilation problems  Fixed view problems when starting a map by command line

--- a/data/dialog/Makefile.am
+++ b/data/dialog/Makefile.am
@@ -2,8 +2,8 @@ pkgdatadir 		= $(datadir)/games/@PACKAGE@
 
 pkgdata_DATA = asc_dlg.zip
 
-asc_dlg.zip: asc_dlg.theme asc_dlg2.theme
+asc_dlg.zip: asc_dlg.theme asc2_dlg.theme
 	chmod -R g-w asc*
 	chmod -R o-w asc*
-	(zip -9 -r asc_dlg.zip asc_dlg.theme asc_dlg2.theme ./asc/* -i *.png *.bmp *.ttf *.theme)
+	(zip -9 -r asc_dlg.zip asc_dlg.theme asc2_dlg.theme ./asc/* -i *.png *.bmp *.ttf *.theme)
 
